2010-07-09  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: Whenever the ContentTemplate changes we
	  need to invalidate the measure. We can't rely on
	  InvalidateMeasure being called as part of clearing out the
	  existing root element as there may be no existing root
	  element.

2010-07-07  Alan McGovern  <amcgovern@novell.com>

	* ItemContainerGenerator.cs: The Container->Item mapping
	  dictionary can't be a doublekeyed dictionary because we
	  sometimes have the same item in multiple containers. Fixes
	  most of drt 348, just two minor glitches left in it.

2010-07-07  Alan McGovern  <amcgovern@novell.com>

	* ItemsControl.cs: Make sure empty collections in ItemsSource
	  result in a LayoutUpdated event being raised. Fixes part of
	  DRT 348 and the new moon-unit

2010-07-06  Alan McGovern  <amcgovern@novell.com>

	* ItemContainerGenerator.cs: If the item has already been
	  added to the ContainerItemMap we shouldn't replace the
	  existing one. This can happen if you do something like:
	  itemsControl.ItemsSource = new [] { 5, 5, 5, 5 }. Fixes
	  PPC.ItemContainerGeneratorTest and a new moon-unit.

2010-07-06  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: Simply this a little so that we always
	  set _contentRoot before returning. Fixes a regression in
	  cs2.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* ItemContainerGenerator.cs: Updated to SL4 compatibility.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: If there is a ContentTemplate on the
	  content presenter we use it regardless of whether or not its
	  root element is null.

2010-06-30  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Don't try to handle ItemContainerStyle change
	  events in Selector as ComboBox and ListBox have different
	  semantics for some reason and it's impossible to do it
	  simply. Unregresses the ComboBox test.

2010-06-30  Alan McGovern  <amcgovern@novell.com>
